added the student testemonial card and fixed it on flames 25 page home section

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -417,9 +417,9 @@
                             <a class="sidebar-link {% block summer_active %} {% endblock %}"
                                 href="{% url 'student_flames' %}" aria-expanded="false">
                                 <span>
-                                    <i class="ti ti-flame text-white"></i>
+                                    <i class="ti ti-flame"></i>
                                 </span>
-                                <span class="hide-menu text-white">FLAMES '25</span>
+                                <span class="hide-menu">FLAMES '25</span>
                             </a>
                         </li>
 
