fixed some error

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -489,7 +489,7 @@
                         </li> -->
 
                         <!-- <li class="sidebar-item" >
-                            <a class="sidebar-link {% block sheet_active %} {% endblock %}" href="{% url 'practice' %}"
+                            <a class="sidebar-link {% block sheet_active %} {% endblock %}" href="#"
                                 aria-expanded="false">
                                 <span class="text-white">
                                     <i class="ti ti-crown"></i>
